Tidy up comments and code